--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,5 @@
 platform = atmelsam
 board = adafruit_feather_m0_usb
 framework = arduino
+lib_deps =
+  https://github.com/arduino-libraries/LiquidCrystal
